syntax = "proto3";

option go_package = "github.com/emilyhuaa/policyLogsEnhancement/pkg/rpc";

package pb;

service CacheService {
    rpc GetCache (CacheRequest) returns (CacheResponse);
}

message CacheRequest {}

message CacheResponse {
    repeated IPMetadata data = 1;
}

message IPMetadata {
    string ip = 1;
    Metadata metadata = 2;
}

message Metadata {
    string name = 1;
    string namespace = 2;
}